test/snapshot/negative/raw_native_mode_invalid/compile.hxml
-cp .
-lib reflaxe.go
-D go_output=out
-D reflaxe_go_raw_native_mode=utf32
-main Main
